intial version done

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,10 @@ body, html {
 
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   height: 100%;
 }
 
